<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="add_boat">Add Boat</string>
    <string name="add_bus">Add Bus</string>
    <string name="add_button">ADD</string>
    <string name="add_car">Add Car</string>
    <string name="add_fuel_purchase">Add Fuel Purchase</string>
    <string name="add_motorcycle">Add Motorcycle</string>
    <string name="add_new_car">Add new Car</string>
    <string name="add_new_service">Add New Service</string>
    <string name="add_new_vehicle">ADD NEW VEHICLE</string>
    <string name="add_truck">Add Truck</string>
    <string name="add_user">Add User</string>

    <string name="app_name">Guzzle</string>

    <string name="capture_receipt">Capture Receipt</string>

    <string name="choose_a_vehicle" />
    <string name="choose_vehicle">Choose Vehicle</string>

    <string name="content_descr">App Logo</string>

    <string name="current_odometer_read">Current Odometer Reading</string>

    <string name="date">Enter Date Here</string>

    <string name="display_stats">Display Fuel Use Statistics</string>

    <string name="dots">....</string>

    <string name="enter_new_user_details">Enter new user details</string>
    <string name="enter_odometer">Enter odometer</string>
    <string name="enter_registration">Enter registration</string>
    <string name="enter_rego">Enter Registration Here</string>
    <string name="enter_text">Enter text here.</string>
    <string name="enter_user_name">Enter user name</string>

    <string name="existing_user">Existing User</string>

    <string name="export_data">Export Data</string>

    <string name="fill_up">Fill Up Vehicle</string>

    <string name="from_date">Previous Date Recorded</string>

    <string name="fuel_log_menu">Fuel log Menu</string>

    <string name="heading_text">Welcome to Guzzle</string>

    <string name="hint">Enter Data Here.</string>
    <string name="hint_date">04/04/2019</string>
    <string name="hint_litres">20</string>
    <string name="hint_location">Melbourne</string>
    <string name="hint_odometer">Odometer</string>
    <string name="hint_price">20.00</string>

    <string name="image">image</string>

    <string name="label_fuel">Fuel Type</string>
    <string name="label_odometer">Odometer</string>
    <string name="label_rego">Registration</string>
    <string name="label_service">Next Service</string>

    <string name="location">Enter Location Here</string>

    <string name="logo">App logo</string>

    <string name="ltr_pumped">Enter Litres Pumped here</string>

    <string name="new_user">New User</string>

    <string name="notes">Enter Notes Here</string>

    <string name="odometer">Enter Odometer Here</string>
    <string name="odometer_distance_travelled">Travelled</string>
    <string name="odometer_notification_setting">Odometer Notification</string>

    <string name="options">Options</string>

    <string name="previous_odometer_read">Previous Odometer Reading</string>

    <string name="price_per_lt">Enter Price Per Litre Here</string>

    <string name="project_logo">Project Logo</string>

    <string name="receipt_storage">Receipt Storage</string>

    <string name="rego_string">Registration</string>

    <string name="remove_fuel_purchase">Remove fuel purchase</string>
    <string name="remove_service">Remove Service</string>

    <string name="roadimagebackground">roadImageBackground</string>

    <string name="saved_vehicle">Saved Vehicles</string>

    <string name="select_user">Select User</string>
    <string name="select_vehicle">Select Vehicle</string>

    <string name="service_log_menu">Service log Menu</string>
    <string name="service_statistics">Service Statistics</string>
    <string name="service_vehicle">Service Vehicle</string>

    <string name="start_button">Add new Vehicle</string>

    <string name="submit_button">Submit</string>

    <string name="testtextview">testTextView</string>

    <string name="title_activity_odometer">OdometerActivity</string>

    <string name="to_date">Last Date Recorded</string>

    <string name="todo">TODO</string>

    <string name="todo1">TODO</string>

    <string name="travel_log">Travel Log.</string>

    <string name="view_fuel_purchases">View Fuel purchases</string>
    <string name="view_fuel_statistics">View Fuel Statistics</string>
    <string name="view_receipts">View Receipts</string>
    <string name="view_services">View Services</string>
    <string name="logohead">logohead</string>
    <string name="welcome_to_guzzle">Welcome to Guzzle</string>
    <string name="enter_price_per_litre">Enter price per litre</string>
    <string name="enter_litres_pumped">Enter litres pumped</string>
    <string name="enter_location">Enter location</string>
    <string name="enter_total_cost">Enter total cost</string>
    <string name="export_to_csv_button">Export to CSV.</string>
    <string name="export_to_file_label">Export Data to CSV File</string>
    <string name="content_description_csv">Export to CSV image</string>
    <string name="fuel_transactions">Fuel Transactions</string>
    <string name="submit_service">Submit Service</string>
    <string name="next_service_odometer">Next service odometer</string>
    <string name="enter_part_cost">Enter part cost</string>
    <string name="enter_labor_cost">Enter labor cost</string>
    <string name="enter_next_service_date">Enter next service date</string>
    <string name="enter_service_date">Enter service date</string>
    <string name="service_log">Service Log</string>
    <string name="camera_imageview">camera imageview</string>
    <string name="open_camera">Open Camera</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="receiptimageview">receiptimageview</string>
    <string name="add_other_vehicle">Add other vehicle</string>
    <string name="welcome_to_guzzle2">Welcome to Guzzle</string>
    <string name="date2">Date</string>
    <string name="location2">Location</string>
    <string name="p_litre2">$.p Litre</string>
    <string name="litres2">Litres</string>
    <string name="fuel_cost2">Fuel Cost</string>
    <string name="datetitle">date</string>
    <string name="locationtitle">location</string>
    <string name="priceperlitretitle">priceperlitre</string>
    <string name="litrestitle">litres</string>
    <string name="totalcosttitle">totalcost</string>
    <string name="datetit">Date:</string>
    <string name="locationttler">Location:</string>
    <string name="cost_litreyy">Cost/Litre:</string>
    <string name="litresttr">Litres:</string>
    <string name="cost2223">Cost:</string>
    <string name="sort_by_total_cost">Sort by total cost</string>
    <string name="sort_by_price_litre">Sort by Price/Litre</string>
    <string name="sort_by_location">Sort by Location</string>
    <string name="sort_by_date">Sort by Date</string>
    <string name="sort_by_litres">sort by litres</string>
    <string name="sort_by_cost">sort by cost</string>
    <string name="vehicle_statistics">Statistics</string>
    <string name="stat_date_range">View by date</string>
    <string name="stat_loc_range">View by location</string>
    <string name="view_all">View All</string>
    <string name="data_analytics">Data Analytics</string>
    <string name="average_fuel_price">Average fuel price:</string>
    <string name="avgcost">avgcost</string>
    <string name="average_litres_purchased">Average litres purchased:</string>
    <string name="avglitres">avglitres</string>
    <string name="average_total_cost">Average total cost:</string>
    <string name="avgtotal">avgtotal</string>
    <string name="kilometers_travelled">Kilometers travelled:</string>
    <string name="kms">kms</string>
    <string name="total_spent_on_fuel">Total spent on fuel:</string>
    <string name="spenttotal">spenttotal</string>
    <string name="total_litres_purchased">Total litres purchased:</string>
    <string name="totallitres">totallitres</string>
    <string name="average_service_cost">Average service cost:</string>
    <string name="avgservicecost">avgservicecost</string>
    <string name="total_spent_on_services">Total spent on services:</string>
    <string name="servicetotal">servicetotal</string>
    <string name="service_date_dd_mm_yy">Service Date dd/mm/yy</string>

</resources>
