<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="248dp"
        android:layout_height="175dp"
        android:contentDescription="@string/roadimagebackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/kisspng_road_royalty_free_illustration_landmarks_road_vector_5a86178550f0d3_7634598815187372853315" />

    <ImageView
        android:id="@+id/imageView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/project_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/averagepricetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/average_fuel_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView35" />

    <TextView
        android:id="@+id/average_fuel_price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/avgcost"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/imageView35" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/average_litres_purchased"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/averagepricetext" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="395dp" />

    <TextView
        android:id="@+id/average_litres_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/avglitres"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/average_fuel_price_text_view" />

    <TextView
        android:id="@+id/averagetotalcosttext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/average_total_cost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/average_total_cost_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/avgtotal"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/average_litres_textview" />

    <TextView
        android:id="@+id/kilometerstravelledtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/kilometers_travelled"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/averagetotalcosttext" />

    <TextView
        android:id="@+id/kilometers_travelled_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/kms"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/average_total_cost_textview" />

    <TextView
        android:id="@+id/totalspentonfueltext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/total_spent_on_fuel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kilometerstravelledtext" />

    <TextView
        android:id="@+id/total_spent_on_fuel_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/spenttotal"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/kilometers_travelled_textview" />

    <TextView
        android:id="@+id/totallitrespurchasedtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/total_litres_purchased"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalspentonfueltext" />

    <TextView
        android:id="@+id/total_litres_purchased_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/totallitres"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/total_spent_on_fuel_textview" />

    <TextView
        android:id="@+id/averageservicecosttext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/average_service_cost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totallitrespurchasedtext" />

    <TextView
        android:id="@+id/average_service_cost_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/avgservicecost"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/total_litres_purchased_textview" />

    <TextView
        android:id="@+id/totalspentservicetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/total_spent_on_services"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/averageservicecosttext" />

    <TextView
        android:id="@+id/service_total_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/servicetotal"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/average_service_cost_textview" />

</android.support.constraint.ConstraintLayout>