<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/view_receipts_button"
        style="@android:style/Widget.Button"
        android:layout_width="158dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:background="#07FD9B"
        android:text="@string/view_receipts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/capture_receipt_button" />

    <Button
        android:id="@+id/capture_receipt_button"
        style="@android:style/Widget.Button"
        android:layout_width="158dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:background="#07FD9B"
        android:text="@string/capture_receipt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView23" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="392dp"
        android:layout_height="129dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/project_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="418dp"
        android:layout_height="277dp"
        android:contentDescription="@string/roadimagebackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/kisspng_road_royalty_free_illustration_landmarks_road_vector_5a86178550f0d3_7634598815187372853315" />
</android.support.constraint.ConstraintLayout>